--- a/app-of-apps/my-app-list/my-app/backend.yml
+++ b/app-of-apps/my-app-list/my-app/backend.yml
@@ -20,7 +20,7 @@ spec:
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
-    namespace: frontend
+    namespace: backend
 
   # Sync policy
   syncPolicy:
