--- a/argocd/environment-promotion/staging.yml
+++ b/argocd/environment-promotion/staging.yml
@@ -12,3 +12,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
