--- a/argocd/helm/qa/1-mongo.yml
+++ b/argocd/helm/qa/1-mongo.yml
@@ -10,14 +10,15 @@ spec:
   source:
     repoURL: https://github.com/sieunhantanbao/sd2411_azure_infrastructure.git
     targetRevision: main
-    path: helm-charts/charts/mongodb/
+    path: argocd/helm/qa/
+    helm:
+      chart: "mongodb"
+      releaseName: qa-mongo-release
+      repoURL: https://sieunhantanbao.github.io/sd2411-helm-charts/
+      valueFiles:
+      - ./values/mongo-values.yaml
   project: default
   syncPolicy:
     automated: {}
     syncOptions:
       - CreateNamespace=true
-  # sourcePath: manifests/
-  helm:
-    valueFiles:
-    - ./values/mongo-values.yaml
-    
