--- a/argocd/helm/qa/2-backend.yml
+++ b/argocd/helm/qa/2-backend.yml
@@ -10,14 +10,16 @@ spec:
   source:
     repoURL: https://github.com/sieunhantanbao/sd2411_azure_infrastructure.git
     targetRevision: main
-    path: helm-charts/charts/backend/
+    path: argocd/helm/qa/
+    helm:
+      chart: "backend"
+      releaseName: qa-backend-release
+      repoURL: https://sieunhantanbao.github.io/sd2411-helm-charts/
+      valueFiles:
+      - ./values/backend-values.yaml
   project: default
   syncPolicy:
     automated: {}
     syncOptions:
       - CreateNamespace=true
   sourcePath: manifests/
-  helm:
-    valueFiles:
-    - ./values/backend-values.yaml
-    
