--- a/argocd/helm/qa/3-frontend.yml
+++ b/argocd/helm/qa/3-frontend.yml
@@ -10,14 +10,16 @@ spec:
   source:
     repoURL: https://github.com/sieunhantanbao/sd2411_azure_infrastructure.git
     targetRevision: main
-    path: helm-charts/charts/frontend/
+    path: argocd/helm/qa/
+    helm:
+      chart: "frontend"
+      releaseName: qa-frontend-release
+      repoURL: https://sieunhantanbao.github.io/sd2411-helm-charts/
+      valueFiles:
+      - ./values/frontend-values.yaml
   project: default
   syncPolicy:
     automated: {}
     syncOptions:
       - CreateNamespace=true
   sourcePath: manifests/
-  helm:
-    valueFiles:
-    - ./values/frontend-values.yaml
-    
