Add custom argocd installation

--- a/argocd/helm/qa/1-mongo.yml
+++ b/argocd/helm/qa/1-mongo.yml
@@ -12,6 +12,7 @@ spec:
     targetRevision: main
     path: argocd/helm/qa/mongo
   project: default
+  configManagementPlugin: kustomize-build-with-helm
   syncPolicy:
     automated: {}
     syncOptions:
