--- a/argocd/helm/qa/2-backend.yml
+++ b/argocd/helm/qa/2-backend.yml
@@ -10,13 +10,7 @@ spec:
   source:
     repoURL: https://github.com/sieunhantanbao/sd2411_azure_infrastructure.git
     targetRevision: main
-    path: argocd/helm/qa/
-    helm:
-      chart: "backend"
-      releaseName: qa-backend-release
-      repoURL: https://sieunhantanbao.github.io/sd2411-helm-charts/
-      valueFiles:
-      - ./values/backend-values.yaml
+    path: argocd/helm/qa/apps/backend
   project: default
   syncPolicy:
     automated: {}
