--- a/argocd/helm/qa/apps/backend/kustomization.yaml
+++ b/argocd/helm/qa/apps/backend/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+- ../../manifests/
+
 helmCharts:
 - name: backend
   repo: https://sieunhantanbao.github.io/sd2411-helm-charts/
