--- a/argocd/helm/qa/apps/frontend/frontend-values.yaml
+++ b/argocd/helm/qa/apps/frontend/frontend-values.yaml
@@ -6,9 +6,9 @@ name: frontend
 
 # Image repository and tag for the frontend container
 image:
-  repository: acranhnguyens.azurecr.io/frontend
+  repository: sieunhantanbao/backend
   pullPolicy: Always
-  tag: "10"
+  tag: latest
   imagePullSecret: 'my-acr-secret'
 
 # Port for the frontend service
