Update argocd deployment script

--- a/argocd/helm/qa/apps/backend/backend-values.yaml
+++ b/argocd/helm/qa/apps/backend/backend-values.yaml
@@ -9,7 +9,7 @@ image:
   repository: sieunhantanbao/backend
   pullPolicy: Always
   tag: latest
-  imagePullSecret: 'my-acr-secret'
+  imagePullSecret: 'my-acr-secret-backend'
 
 # Port for the backend service
 servicePort: 3000
