--- a/argocd/helm/qa/apps/backend/kustomization.yaml
+++ b/argocd/helm/qa/apps/backend/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../manifests/
+- secret.yaml
 
 helmCharts:
 - name: backend
   repo: https://sieunhantanbao.github.io/sd2411-helm-charts/
-  version: "0.1.0"
+  version: "1.0.0"
   releaseName: backend
   namespace: qa
   valuesFile: backend-values.yaml
