--- a/argocd/helm/qa/apps/frontend/frontend-values.yaml
+++ b/argocd/helm/qa/apps/frontend/frontend-values.yaml
@@ -9,7 +9,7 @@ image:
   repository: sieunhantanbao/backend
   pullPolicy: Always
   tag: latest
-  imagePullSecret: 'my-acr-secret'
+  imagePullSecret: 'my-acr-secret-frontend'
 
 # Port for the frontend service
 servicePort: 3000
