--- a/argocd/helm/qa/apps/backend/backend-values.yaml
+++ b/argocd/helm/qa/apps/backend/backend-values.yaml
@@ -1,13 +1,13 @@
 # Replica count for the backend deployment
-replicaCount: 2
+replicaCount: 3
 
 # name of resources such as deployment, container, service
 name: backend
 
 # Image repository and tag for the backend container
 image:
-  repository: sieunhantanbao/backend
-  tag: latest
+  repository: acranhnguyens.azurecr.io/backend
+  tag: 10
   pullPolicy: Always
   imagePullSecret: 'qa-acr-secret'
 
