--- a/argocd/helm/qa/apps/postgresdb/kustomization.yaml
+++ b/argocd/helm/qa/apps/postgresdb/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-- name: mongodb
+- name: postgresdb
   repo: https://sieunhantanbao.github.io/sd2411-helm-charts/
   version: "1.0.0"
-  releaseName: mongodb
+  releaseName: postgresdb
   namespace: qa
-  valuesFile: mongo-values.yaml
+  valuesFile: postgresdb-values.yaml
