--- a/argocd/helm/qa/apps/frontend/frontend-values.yaml
+++ b/argocd/helm/qa/apps/frontend/frontend-values.yaml
@@ -18,7 +18,7 @@ env:
   normal:
     - name: ASPNETCORE_ENVIRONMENT
       value: Development
-    - name: ASPNETCORE_URLS
-      value: https://+
+    # - name: ASPNETCORE_URLS
+    #   value: https://+
     - name: ApiAddress
       value: http://backend
