Update argocd deployment for ingress controller

--- a/argocd/helm/qa/apps/frontend/frontend-values.yaml
+++ b/argocd/helm/qa/apps/frontend/frontend-values.yaml
@@ -14,6 +14,8 @@ image:
 # Port for the frontend service
 servicePort: 80
 
+tlssecretName: 'qa-tls-secret'
+
 env:
   normal:
     - name: ASPNETCORE_ENVIRONMENT
