--- a/argocd/helm/qa/apps/frontend/frontend-values.yaml
+++ b/argocd/helm/qa/apps/frontend/frontend-values.yaml
@@ -13,8 +13,9 @@ image:
 
 # Port for the frontend service
 servicePort: 80
-
-tlssecretName: 'qa-tls-secret'
+tls:
+  host: qa.com.vn
+  secretName: 'qa-tls-secret'
 
 env:
   normal:
