Add environment name and build Id

--- a/argocd/helm/qa/0-secret.yaml
+++ b/argocd/helm/qa/0-secret.yaml
@@ -8,5 +8,11 @@ kubectl create secret docker-registry <secret-name> \
     --docker-server=<container-registry-name>.azurecr.io \
     --docker-username=<service-principal-ID> \
     --docker-password=<service-principal-password>
+# i.e
+kubectl create secret docker-registry qa-acr-secret \
+    --namespace qa \
+    --docker-server=acranhnguyens.azurecr.io \
+    --docker-username=<service-principal-ID> \
+    --docker-password=<service-principal-password>
 
 
