--- a/argocd/helm/qa/0-secret.yaml
+++ b/argocd/helm/qa/0-secret.yaml
@@ -3,12 +3,14 @@
 # First you need to create a SP (Service Principal) if it does exist
 # Then get the SP_ID and SP_PASSWORD
 # Finally, run below command to create a secret for docker registry
+kubectl create ns <namespace>
 kubectl create secret docker-registry <secret-name> \
     --namespace <namespace> \
     --docker-server=<container-registry-name>.azurecr.io \
     --docker-username=<service-principal-ID> \
     --docker-password=<service-principal-password>
 # i.e
+kubectl create ns qa
 kubectl create secret docker-registry qa-acr-secret \
     --namespace qa \
     --docker-server=acranhnguyens.azurecr.io \
