--- a/argocd/helm/qa/apps/mongo/kustomization.yaml
+++ b/argocd/helm/qa/apps/mongo/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-- name: postgresdb
+- name: mongo
   repo: https://sieunhantanbao.github.io/sd2411-helm-charts/
-  version: "0.2.5"
-  releaseName: postgresdb
+  version: "1.0.0"
+  releaseName: mongo
   namespace: qa
-  valuesFile: postgresdb-values.yaml
+  valuesFile: mongo-values.yaml
