--- a/argocd/helm/prod/apps/backend/kustomization.yaml
+++ b/argocd/helm/prod/apps/backend/kustomization.yaml
@@ -1,13 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# resources:
-# - secret.yaml
+resources:
+- ../../../base/backend
 
 helmCharts:
 - name: backend
-  repo: https://sieunhantanbao.github.io/sd2411-helm-charts/
-  version: "1.0.0"
-  releaseName: backend
   namespace: prod
   valuesFile: backend-values.yaml
