Test Image Updater

--- a/argocd/helm/qa/2-backend.yml
+++ b/argocd/helm/qa/2-backend.yml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: backend-qa
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: acranhnguyens.azurecr.io/backend
+    argocd-image-updater.argoproj.io/example.update-strategy: latest
 spec:
   destination:
     namespace: qa
