--- a/argocd/helm/qa/2-backend.yml
+++ b/argocd/helm/qa/2-backend.yml
@@ -4,7 +4,7 @@ metadata:
   name: backend-qa
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: acranhnguyens.azurecr.io/backend
+    argocd-image-updater.argoproj.io/image-list: img-alias=acranhnguyens.azurecr.io/backend
     argocd-image-updater.argoproj.io/example.update-strategy: latest
     argocd-image-updater.argoproj.io/img-alias.pull-secret: pullsecret:qa/qa-acr-secret
 spec:
