Update config for Image Updater ArgoCD

--- a/tools/argocd-image-updater/2-github-secret.yaml
+++ b/tools/argocd-image-updater/2-github-secret.yaml
@@ -1,5 +1,5 @@
 # Step 1: Run this command to create SSH KeyPair
-# ssh-keygen -t sd2411_infrastructure -C "sieunhantanbao@gmail.com" -f ~/.ssh/sd2411_infrastructure
+# ssh-keygen -t ed25519 -C "sieunhantanbao@gmail.com" -f ~/.ssh/argocd_ed25519
 # Step 2: Get the publish key to add to Github repository
 # => cat ~/.ssh/argocd_ed25519.pub
 # Step 3: Gte the private key to pass to the below 'sshPrivateKey'
@@ -8,7 +8,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: sd2411_azure_infrastructure
+  name: sd2411azureinfrastructure
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
